# torch-tut

./: Main.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: Main-checkpoint.ipynb
src/: functions.py  housing_nn.py  neural_net.py  num_classifier.py  num_classifier_cuda.py  xor_classifier.py
