[project]
name = "torch-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "mlxtend>=0.25.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
]

[tool.basedpyright]
typeCheckingMode = "off"
